// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden — basic > 1v1 Briar mirror (대칭) 1`] = `
{
  "duration": 10.1,
  "logCounts": {
    "ability": 6,
    "attack": 25,
    "death": 1,
    "move": 6,
  },
  "scenarioName": "1v1 Briar mirror (대칭)",
  "seed": 42,
  "snapshotCount": 304,
  "units": [
    {
      "alive": true,
      "attackCount": 13,
      "castCount": 3,
      "championApi": "TFT17_Briar",
      "finalHp": 54.44,
      "id": "player-0",
      "killCount": 1,
      "maxHp": 650,
      "starLevel": 1,
      "team": "player",
      "totalDamageDealt": 733.33,
      "totalDamageTaken": 680,
    },
    {
      "alive": false,
      "attackCount": 12,
      "castCount": 3,
      "championApi": "TFT17_Briar",
      "finalHp": 0,
      "id": "enemy-0",
      "killCount": 0,
      "maxHp": 650,
      "starLevel": 1,
      "team": "enemy",
      "totalDamageDealt": 680,
      "totalDamageTaken": 733.33,
    },
  ],
  "winner": "player",
}
`;

exports[`golden — basic > 1v1 Jinx+IE vs Briar (단일 스탯 아이템) 1`] = `
{
  "duration": 9.6333,
  "logCounts": {
    "ability": 3,
    "attack": 19,
    "death": 1,
    "move": 6,
  },
  "scenarioName": "1v1 Jinx+IE vs Briar (단일 스탯 아이템)",
  "seed": 42,
  "snapshotCount": 290,
  "units": [
    {
      "alive": false,
      "attackCount": 8,
      "castCount": 1,
      "championApi": "TFT17_Jinx",
      "finalHp": 0,
      "id": "player-0",
      "killCount": 0,
      "maxHp": 990,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 1138.43,
      "totalDamageTaken": 1033,
    },
    {
      "alive": true,
      "attackCount": 11,
      "castCount": 2,
      "championApi": "TFT17_Briar",
      "finalHp": 155.53,
      "id": "enemy-0",
      "killCount": 1,
      "maxHp": 1170,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 1033,
      "totalDamageTaken": 1138.43,
    },
  ],
  "winner": "enemy",
}
`;

exports[`golden — basic > 2v2 Akali+Jinx vs Belveth+Illaoi 1`] = `
{
  "duration": 15.3333,
  "logCounts": {
    "ability": 10,
    "attack": 47,
    "death": 2,
    "move": 16,
    "status_expire": 1,
  },
  "scenarioName": "2v2 Akali+Jinx vs Belveth+Illaoi",
  "seed": 1337,
  "snapshotCount": 461,
  "units": [
    {
      "alive": false,
      "attackCount": 10,
      "castCount": 3,
      "championApi": "TFT17_Akali",
      "finalHp": 0,
      "id": "player-0",
      "killCount": 0,
      "maxHp": 1350,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 889.67,
      "totalDamageTaken": 1445.57,
    },
    {
      "alive": false,
      "attackCount": 12,
      "castCount": 1,
      "championApi": "TFT17_Jinx",
      "finalHp": 0,
      "id": "player-1",
      "killCount": 0,
      "maxHp": 990,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 973.12,
      "totalDamageTaken": 905.7,
    },
    {
      "alive": true,
      "attackCount": 15,
      "castCount": 3,
      "championApi": "TFT17_Belveth",
      "finalHp": 1350,
      "id": "enemy-0",
      "killCount": 2,
      "maxHp": 1350,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 1666.96,
      "totalDamageTaken": 86.21,
    },
    {
      "alive": true,
      "attackCount": 10,
      "castCount": 1,
      "championApi": "TFT17_Illaoi",
      "finalHp": 203.42,
      "id": "enemy-1",
      "killCount": 0,
      "maxHp": 1980,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 684.31,
      "totalDamageTaken": 1776.58,
    },
  ],
  "winner": "enemy",
}
`;
